# scorpio_navigation

./: .gitmodules  README.md
.github/workflows/: build_and_test.yml
loam_interface/: README.md  package.xml
loam_interface/include/loam_interface/: loam_interface.hpp
loam_interface/launch/: loam_interface_launch.py
loam_interface/src/: loam_interface.cpp
scorpio_nav_bringup/: CMakeLists.txt  package.xml
scorpio_nav_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  scorpio_real_launch.py  scorpio_sim_launch.py  slam_launch.py
scorpio_nav_bringup/params/: lio_3d_params.yaml  nav_params.yaml
scorpio_nav_bringup/params/reality/: nav_params.yaml
scorpio_nav_bringup/params/simulation/: nav_params.yaml
scorpio_nav_bringup/rviz/: default_view.rviz  lio_3d.rviz
scorpio_navigation/: package.xml
